# CS2-lab-2

./: CMakeLists.txt  README.md  main.cpp
headers/: patient.h  scheduler.h  time.h  utilities.h
sources/: patient.cpp  scheduler.cpp  time.cpp  utilities.cpp
utilities/: enums.h
